--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,26 @@
 /ALUTest9_16.class
 /ALUTest.class
 /XALU.class
+/AdderTest.class
+/AriRightShiftTest.class
+/ClaAdderTest.class
+/FloatAdditionTest.class
+/FloatDivisionTest.class
+/FloatMultiplicationTest.class
+/FloatRepresentationTest.class
+/FloatSubtractionTest.class
+/FloatTrueValueTest.class
+/FullAdderTest.class
+/Ieee754Test.class
+/IntegerAdditionTest.class
+/IntegerDivisionTest.class
+/IntegerMultiplicationTest.class
+/IntegerRepresentationTest.class
+/IntegerSubtractionTest.class
+/IntegerTrueValueTest.class
+/LeftShiftTest.class
+/LogRightShiftTest.class
+/NegationTest.class
+/OneAdderTest.class
+/SignedAdditionTest.class
+/TestLogger.class
